# SimExchange

./: README.md  bot_config_window.py  dialog.py  main.py  order_book.py  pyproject.toml  simulator.py  test_bot.py  trading_agent.py  trading_bot.py  trading_strategies.py  visualizer.py
simexchange/: README.md  __init__.py  __main__.py  main.py
simexchange/config/: default_config.yaml  settings.py
simexchange/core/: __init__.py
simexchange/core/models/: __init__.py  agent.py  market_data.py  order.py  simulation_config.py  trade.py
simexchange/core/services/: __init__.py  agent_service.py  order_book_service.py  simulation_service.py  trading_simulator.py
simexchange/core/strategies/: __init__.py
simexchange/tests/: __init__.py  test_basic_functionality.py
simexchange/ui/: __init__.py
simexchange/ui/components/: __init__.py
simexchange/ui/dialogs/: __init__.py
simexchange/ui/windows/: __init__.py
simexchange/utils/: __init__.py  performance.py
